# SFMLTemplate

./: CMakeLists.txt  README.md
lib/imgui/: CMakeLists.txt  imconfig.h  imgui-SFML.cpp
src/: Animation.h  AnimationBlueprint.h  AnimationSystem.cpp  AnimationSystem.h  Blueprint.h  Component.h  ComponentType.h  Configuration.cpp  Configuration.h  Entity.h  EntityBlueprint.cpp  EntityBlueprint.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  Globals.h  RenderingSystem.cpp  RenderingSystem.h  Scene.cpp  Scene.h  SceneBlueprint.cpp  SceneBlueprint.h  SpriteComponent.cpp  SpriteComponent.h  System.cpp  System.h  TransformComponent.cpp  TransformComponent.h  main.cpp
src/res/animations/: tree.lua
src/res/config/: config.lua
src/res/entities/: tree.lua
src/res/scenes/: first.lua
